Send data through PutExtra

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Java_Learning</string>
     <string name="character_Header">Naruto Characters</string>
     <string name="btnViewInfo">View Info</string>
+    <string name="todo">TODO</string>
 </resources>
