Finished Naruto demo app v.0.1.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="character_Header">Naruto Characters</string>
     <string name="btnViewInfo">View Info</string>
     <string name="todo">TODO</string>
+    <string name="detail_character"></string>
+    <string name="textName_DetailPage">Name</string>
+    <string name="textDetail_DetailPage">Details</string>
+
 </resources>
